--- a/src/waterfallChart/WaterfallChart.css
+++ b/src/waterfallChart/WaterfallChart.css
@@ -147,6 +147,7 @@
     border-left: 8px solid #888888;
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
+    cursor: pointer;
 }
 
 .jsp_wc_foldHandleUnfolded {
@@ -158,6 +159,7 @@
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     border-top: 8px solid #888888;
+    cursor: pointer;
 }
 
 .jsp_wc_recordBarsContainer {
