--- a/src/waterfallChart/WaterfallChart.css
+++ b/src/waterfallChart/WaterfallChart.css
@@ -102,7 +102,8 @@
     background-image: url("images/maximize-handle-icon.png");
 }
 
-.jspwc_maximizeHandle.jspwc_minimizeHandle {
+.jspwc_minimizeHandle {
+    background-size: 12px 12px;
     background-image: url("images/minimize-handle-icon.png");
 }
 
